# logger-library

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
app/lib/: app.cpp  app.h  ts_queue.h  ts_queue.inl
examples/: example1.cpp
include/loggerlib/: file_logger.h  logger_base.h  socket_logger.h
socket_statistics/: CMakeLists.txt  main.cpp
socket_statistics/lib/: socket_log_server.cpp  socket_log_server.h  statistic_collector.cpp  statistic_collector.h  ts_counter.h
src/: file_logger.cpp  logger_base.cpp  socket_logger.cpp
